--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
+    "typed.js": "^2.0.10",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
